--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AktivasiActivity"></activity>
+        <activity android:name=".AppoinmentActivity"></activity>
+        <activity android:name=".MainPertemuanActivity" />
+        <activity android:name=".HistoryActivity" />
+        <activity android:name=".AktivasiActivity" />
         <activity android:name=".ConsultationActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".SplashActivity">
